Bug fixes can't swipe on mobile

--- a/src/app/pages/components/home/home.component.scss
+++ b/src/app/pages/components/home/home.component.scss
@@ -77,7 +77,8 @@
 
                 li {
                     margin: 20px;
-                    display: inline;
+                    display: inline-block;
+                    transition: transform 1s;
 
                     i {
                         font-size: 30px;
@@ -87,6 +88,8 @@
 
                 li.active,
                 li.active:hover {
+                    transform: rotate(360deg);
+
                     i {
                         color: #83ba43;
                     }
@@ -104,6 +107,16 @@
             background: #f9f9f9;
             border-bottom: 1px solid rgba(0, 0, 0, 0.15);
             z-index: -1;
+        }
+    }
+
+    .action {
+        display: inline-flex;
+        width: 100%;
+        justify-content: center;
+
+        button {
+            margin: 0 20px;
         }
     }
 }
